Adjust margins in feature grid items, fix polyglot code snippet scrollbars and size (#284)
## What is the goal of this PR?

Previously height of the feature grid item description was fixed. That
made it display no margin on smaller screens and made content length be
limited to certain length.

Now feature grid uses flex layout which allows content to adjust height
to the highest item in a row.
Polyglot code snippets height is aligned with lines and displays
scrollbars correctly on all tabs.

## What are the changes implemented in this PR?

- replaced feature grid table with divs,
- refactored feature grid styles to use flex layout,
- added resize observer to code snippet to update custom scrollbars.

--- a/website/src/framework/publication-panel/publication-panel.component.scss
+++ b/website/src/framework/publication-panel/publication-panel.component.scss
@@ -62,26 +62,3 @@ $number-of-lines-mobile: 10;
         margin-top: 12px;
     }
 }
-
-::ng-deep td-feature-grid table.section {
-    border-radius: 0;
-    @include section-width($offset: -2px);
-}
-
-::ng-deep td-feature-grid:first-child table.section {
-    border-top-left-radius: $border-radius;
-    border-top-right-radius: $border-radius;
-}
-
-::ng-deep td-feature-grid:last-child table.section {
-    border-bottom-left-radius: $border-radius;
-    border-bottom-right-radius: $border-radius;
-}
-
-::ng-deep td-feature-grid .kpt-row-size-2 .kpt-feature-body {
-    height: $font-size-p2 * $line-height-p2 * 7 !important; // overrides style in td-feature-grid
-
-    @media (min-width: $media-min-width-tablet) and (max-width: $media-max-width-tablet) {
-        height: $font-size-p2 * $line-height-p2 * 9 !important; // overrides style without media query
-    }
-}
